--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -373,6 +373,12 @@
 /* Text below the contact's name when the contact is online in the Chat Screen */
 "chat.online.label" = "آنلاین";
 
+/* When user replies to a moment, it sends a quoted message to the author of the moment via chat. This label is displyed in the chat bubble to indicate a moment reply when the moment has expired. */
+"chat.quoted.moment.expired.label" = "لحظه انقضا شده";
+
+/* When user replies to a moment, it sends a quoted message to the author of the moment via chat. This label is displyed in the chat bubble to indicate a moment reply. */
+"chat.quoted.moment.label" = "لحظه";
+
 /* Label shown when user is typing */
 "chat.typing.capitalized" = "در حال نوشتن...";
 
