--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -373,6 +373,12 @@
 /* Text below the contact's name when the contact is online in the Chat Screen */
 "chat.online.label" = "online";
 
+/* When user replies to a moment, it sends a quoted message to the author of the moment via chat. This label is displyed in the chat bubble to indicate a moment reply when the moment has expired. */
+"chat.quoted.moment.expired.label" = "Moment verlopen";
+
+/* When user replies to a moment, it sends a quoted message to the author of the moment via chat. This label is displyed in the chat bubble to indicate a moment reply. */
+"chat.quoted.moment.label" = "Moment";
+
 /* Label shown when user is typing */
 "chat.typing.capitalized" = "aan het typen...";
 
@@ -1203,7 +1209,7 @@
 "nux.new.post.button" = "Tik om een update te delen met je vrienden & familie op HalloApp";
 
 /* Title of the button that opens the camera. */
-"open.camera" = "Camera Openen";
+"open.camera" = "Open Camera";
 
 /* button to launch photo and video library */
 "photo.and.video.library" = "Foto- & Videobibliotheek";
