--- a/Halloapp/es.lproj/Localizable.strings
+++ b/Halloapp/es.lproj/Localizable.strings
@@ -862,6 +862,9 @@
 /* Text shown to tell user the group title is tappable */
 "group.title.tap.for.info" = "Toca aquí para ver la información del grupo";
 
+/* More info menu item */
+"groupGridHeader.moreInfo" = "Más información";
+
 /* Text shown in notification when the user is added to a new group */
 "groups.add.notification" = "Fuiste agregado a un nuevo grupo";
 
@@ -1333,9 +1336,6 @@
 
 /* Row in Settings screen */
 "profile.row.my.posts" = "Mis publicaciones";
-
-/* Row in Profile Screen. */
-"profile.row.share" = "Compartir HalloApp";
 
 /* Title for the button allowing to select a new profile photo. */
 "profile.take.choose.photo" = "Tomar o seleccionar una foto";
