--- a/Halloapp/pt.lproj/Localizable.strings
+++ b/Halloapp/pt.lproj/Localizable.strings
@@ -253,6 +253,9 @@
 /* Text shown in the chat interface informing the user that the contact is blocked */
 "chat.blocked.contact.label" = "Este contato está bloqueado, toque para desbloquear";
 
+/* Title of the bottom sheet shown in the chat screen of a contact that is blocked. The bottom sheet contains an unblock button. */
+"chat.contact.is.blocked.title.label" = "O contato está bloqueado, você não receberá nenhuma mensagem até desbloqueá-lo.";
+
 /* Label for creating a new group */
 "chat.create.new.group" = "Criar novo grupo";
 
@@ -270,6 +273,9 @@
 
 /* Text shown in Chat when the security keys of the contact user is chatting with, have changed */
 "chat.event.security.keys.changed" = "Chaves de segurança com %@ alteradas";
+
+/* Chat entry that can be tapped to add the contact to address book */
+"chat.event.tap.to.add.contact" = "Toque para adicionar %@ ao seu catálogo de endereços";
 
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "%@ entrou no grupo através do link de convite de grupo";
@@ -367,8 +373,17 @@
 /* Text below the contact's name when the contact is online in the Chat Screen */
 "chat.online.label" = "online";
 
+/* When user replies to a moment, it sends a quoted message to the author of the moment via chat. This label is displyed in the chat bubble to indicate a moment reply when the moment has expired. */
+"chat.quoted.moment.expired.label" = "Momento expirado";
+
+/* When user replies to a moment, it sends a quoted message to the author of the moment via chat. This label is displyed in the chat bubble to indicate a moment reply. */
+"chat.quoted.moment.label" = "Momento";
+
 /* Label shown when user is typing */
 "chat.typing.capitalized" = "escrevendo...";
+
+/* Text shown in the chat interface informing the user that the contact is unblocked */
+"chat.unblocked.contact.label" = "Você desbloqueou este contato";
 
 /* Text shown when user is about to remove the chat */
 "chats.list.remove.message" = "Ao remover este chat, todo o histórico e conteúdos deste chat serão apagados do seu dispositivo.";
@@ -847,6 +862,9 @@
 /* Text shown to tell user the group title is tappable */
 "group.title.tap.for.info" = "Toque aqui para obter informações do grupo";
 
+/* More info menu item */
+"groupGridHeader.moreInfo" = "Mais informações";
+
 /* Text shown in notification when the user is added to a new group */
 "groups.add.notification" = "Foi adicionado a um novo grupo";
 
@@ -1322,9 +1340,6 @@
 /* Row in Settings screen */
 "profile.row.my.posts" = "As minhas publicações";
 
-/* Row in Profile Screen. */
-"profile.row.share" = "Partilhar o HalloApp";
-
 /* Title for the button allowing to select a new profile photo. */
 "profile.take.choose.photo" = "Tire ou escolha uma foto";
 
@@ -1735,6 +1750,9 @@
 
 /* No comment provided by engineer. */
 "VIDEO" = "VÍDEO";
+
+/* Text that indicates a view action. */
+"view.title" = "Visualizar";
 
 /* Title for the button that confirms intent to delete your own post. */
 "your.post.deletepost.button" = "Apagar publicaçāo";
