--- a/Halloapp/es.lproj/Localizable.stringsdict
+++ b/Halloapp/es.lproj/Localizable.stringsdict
@@ -199,7 +199,7 @@
 	<key>n.unread.comments.title</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>%#@n_unread_comments@</string>
+		<string>%#@n_comentarios_sin_leer@</string>
 		<key>n_unread_comments</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -210,6 +210,22 @@
 			<string>%d Comentario sin leer</string>
 			<key>other</key>
 			<string>%d Comentarios sin leer</string>
+		</dict>
+	</dict>
+	<key>n.unread.messages.title</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_unread_messages@</string>
+		<key>n_unread_messages</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%d Unread Message</string>
+			<key>other</key>
+			<string>%d Unread Messages</string>
 		</dict>
 	</dict>
 	<key>notification.n.photos</key>
