--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -59,7 +59,7 @@
 "app.name.halloapp" = "هالواپ";
 
 /* Placeholder text for when the archive is empty */
-"archive.empty.placeholder" = "پست‌های بایگانی شده شما اینجا خواهند بود";
+"archive.empty.placeholder" = "پست‌های شما به مدت ۳۰ روز اینجا بایگانی خواهند شد";
 
 /* Archive navigation label */
 "archive.title.label" = "بایگانی";
@@ -191,7 +191,7 @@
 "call.status.connecting" = "در حال اتصال...";
 
 /* Status displayed when call fails. */
-"call.status.failed" = "ناموفق";
+"call.status.failed" = "تماس ناموفق";
 
 /* Status displayed when call is on hold. */
 "call.status.held" = "انتظار";
@@ -251,7 +251,7 @@
 "Cancel" = "لغو";
 
 /* Text shown in the chat interface informing the user that the contact is blocked */
-"chat.blocked.contact.label" = "مخاطب مسدود شد، برای رفع مسدودیت کلیک کنید";
+"chat.blocked.contact.label" = "شما مخاطب را مسدود کردید";
 
 /* Title of the bottom sheet shown in the chat screen of a contact that is blocked. The bottom sheet contains an unblock button. */
 "chat.contact.is.blocked.title.label" = "مخاطب مسدود شد، شما از ایشان پیامی دریافت نخواهید کرد تا زمانی که ایشان را نامسدود کنید.";
@@ -269,13 +269,13 @@
 "chat.delete.title" = "حذف پیام انتخاب شده؟";
 
 /* Text shown at the top of the chat screen informing the user that the chat is end-to-end encrypted */
-"chat.encryption.label" = "گفتگوها رمزگذاری سرتاسری شده‌اند و هالواپ به آن‌ها دسترسی ندارد. برای اطلاعات بیشتر کلیک کنید.";
+"chat.encryption.label" = "تمام گفتگوها در هالواپ رمزگذاری سرتاسری شده‌اند. برای اطلاعات بیشتر کلیک کنید.";
 
 /* Text shown in Chat when the security keys of the contact user is chatting with, have changed */
 "chat.event.security.keys.changed" = "کد امنیتی با @% تغییر کرده است";
 
 /* Chat entry that can be tapped to add the contact to address book */
-"chat.event.tap.to.add.contact" = "برای اضافه کردن @% به گروهتان کلیک کنید";
+"chat.event.tap.to.add.contact" = "برای اضافه کردن @% به لیست مخاطبین کلیک کنید";
 
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "%@ از طریق لینک به گروه پیوست";
@@ -409,12 +409,6 @@
 /* Placeholder text for the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "نوشتن نظر";
 
-/* Header that appears above all the unread Messages in the comments view when there are more than one unread message */
-"comment.unread.chat.messages.header.plural" = "@% پیام خوانده نشده";
-
-/* Header that appears above one single unread Message in the chat view. */
-"comment.unread.chat.messages.header.single" = "@% پیام خوانده نشده";
-
 /* Text displayed in place of a comment that is not supported in the current app version. */
 "comment.unsupported" = "ورژن هالواپ شما این نوع نظر را نمیپذیرد.";
 
@@ -503,7 +497,7 @@
 "contacts.permission.explanation.title" = "مخاطب‌ها";
 
 /* Title for tutorial explaining how user can enable contacts permission */
-"contacts.permission.tutorial.title" = "مخاطب‌ها";
+"contacts.permission.tutorial.title" = "چطور \"لیست مخاطب‌ها\" را روشن کنید";
 
 /* The default name given to new groups when the user is in Zero Zone (no contacts) */
 "create.group.default.name.my.new.group" = "گروه جدیدم";
@@ -665,7 +659,7 @@
 "feed.privacy.list.except.title" = "پست‌های من را پنهان کن از...";
 
 /* Description of the alert shown to user indicating the author's post is only shown to the author's favorites audience */
-"feed.privacy.list.notOwn.only.description" = "این پست فقط برای به اشتراک گذاشتن با گروه خاص از مخاطبین است. میتوانید برای تغییر آن به حریم خصوصی در تنظیمات مراجعه کنید.";
+"feed.privacy.list.notOwn.only.description" = "فقط مخاطبین محبوب @% میتوانند این پست را ببینند.";
 
 /* Settings > Privacy > Posts > Favorites privacy setting. */
 "feed.privacy.list.only" = "اشتراک گذاشتن با...";
@@ -677,7 +671,7 @@
 "feed.privacy.list.only.title" = "محبوب‌ها";
 
 /* Description of the alert shown to user indicating their post is only shown to their favorites audience */
-"feed.privacy.list.own.only.description" = "این پست فقط برای به اشتراک گذاشتن با گروه خاص از مخاطبین است. میتوانید مخاطبین خود را موقع تنظیم پست تغییر دهید و یا به حریم خصوصی در تنظیمات مراجعه کنید.";
+"feed.privacy.list.own.only.description" = "فقط مخاطبین محبوب شما میتوانند این پست را ببینند.";
 
 /* Button to edit favorites */
 "feed.privacy.list.set.favorites" = "تنظیم مخاطبین محبوب";
@@ -731,7 +725,7 @@
 "group.bg.title" = "زمینه";
 
 /* Label shown above group description input box */
-"group.description.label" = "توضیحات";
+"group.description.label" = "توضیحات گروه";
 
 /* Message text shown with the user who added a group member */
 "group.event.added.member" = "%1$@ %2$@ را دعوت کرد";
@@ -890,7 +884,7 @@
 "home.calls.fail.audio.title" = "نمیتوانید در حین تماس هالواپ ضبط صدا کنید.";
 
 /* Text shown to users on call failure. */
-"home.calls.fail.text" = "ببخشید، لطفاً بعداً امتحان کنید.";
+"home.calls.fail.text" = "از ارتباط تلفنتان با اینترنت اطمینان حاصل فرمایید و دوباره امتحان کنید.";
 
 /* Title of failed call screen alert. */
 "home.calls.fail.title" = "خطا درتماس.";
@@ -944,7 +938,7 @@
 "invite.text" = "به من در هالواپ ملحق شوید - راهی ساده، خصوصی و مطمئن برای ارتباط با دوستان و آشنایان. آن را از طریق https://halloapp.com/dl نصب کنید";
 
 /* Text of invitation to join HalloApp. First argument is the invitee's name, second argument is their phone number. */
-"invite.text.specific" = "سلام %1$@، شما را دعوت میکنم به من در هالواپ ملحق شوید - یک شبکه برای آشنایانم. از %2$@ برای ثبت نام استفاده کنید. آن را از https://halloapp.com/dl نصب کنید";
+"invite.text.specific" = "سلام @$1%، شما را دعوت میکنم به من در هالواپ ملحق شوید - یک شبکه برای آشنایانم. از @$2% برای ثبت نام استفاده کنید. آن را از https://halloapp.com/dl نصب کنید";
 
 /* Version of an invitation to join HalloApp. The argument is the invitee's name. */
 "invite.text.specific.1" = "سلام @%, من در هالواپ هستم. میتوانید دانلود کنید و به من ملحق شوید https://halloapp.com/install";
@@ -959,7 +953,7 @@
 "invite.text.specific.4" = "سلام @%! به من در هالواپ بپیوند و لحظه‌های جدیدت را با دوستان واقعیت به اشتراک بگذار. به این سایت برو: https://halloapp.com/new";
 
 /* Title for the screen that allows to select contact to invite. */
-"invite.title" = "دعوت";
+"invite.title" = "دعوت دوستان";
 
 /* Title of cell at the top of the invite screen */
 "invite.via.link" = "دعوت از طریق لینک";
@@ -1148,6 +1142,18 @@
 /* New moment notification text to be shown to the user. */
 "notification.moment" = "لحظه جدید";
 
+/* New moment notification text to be shown to the user. */
+"notification.moment.1" = "@% لحظه‌ای را به اشراک گذاشت";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment.2" = "@$1% و @$2% لحظه‌های جدیدی به اشتراک گذاشتند";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment.3" = "@$1%، @$2% و @$3% لحظه‌های جدیدی به اشتراک گذاشتند";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment.5" = "@$1%، @$2%، @$3% و دیگران لحظه‌های جدیدی به اشتراک گذاشتند";
+
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notification.n.photos";
 
@@ -1323,7 +1329,7 @@
 "profile.name.length" = "%1$d/%2$d";
 
 /* Row in Profile screen. */
-"profile.row.about" = "درباره";
+"profile.row.about" = "درباره هالواپ";
 
 /* Row in Profile Screen */
 "profile.row.account" = "حساب کاربری";
@@ -1342,6 +1348,9 @@
 
 /* Title for the button allowing to select a new profile photo. */
 "profile.take.choose.photo" = "عکس بگیرید یا انتخاب کنید";
+
+/* Title of the screen with the user's profile. */
+"profile.title" = "حساب کاربری";
 
 /* Title for the screen allowing to edit profile name */
 "profile.title.your.name" = "نام شما";
@@ -1542,7 +1551,7 @@
 "settings.account.export.navbar" = "استخراج داده‌ها";
 
 /* Label for when the date at which the exported user data will be available is not determined. */
-"settings.account.export.not.found" = "تاریخ آماده سازی مشخص نیست.";
+"settings.account.export.not.found" = "تاریخ آماده سازی مشخص نشد.";
 
 /* Button to open the user data exported from HalloApp. */
 "settings.account.export.open.data" = "باز کردن داده‌های استخراج شده";
@@ -1620,13 +1629,13 @@
 "textview.context.menu.video.call.user" = "تماس ویدیویی";
 
 /* Link to expand truncated text. */
-"textview.more" = "...بیشتر";
+"textview.more" = "بیشتر";
 
 /* Default preview text shown for a symmetric contact in the chats list screen that the user haven't messaged yet */
 "thread.list.preview.already.user.default" = "%@ در هالواپ است";
 
 /* Default preview text shown for a symmetric contact who just joined Halloapp */
-"thread.list.preview.new.user.default" = "%@ در هالواپ است! 🎉";
+"thread.list.preview.new.user.default" = "@% در هالواپ است! 🎉";
 
 /* Last seen timestamp: full date in short format and time */
 "timestamp.last.seen.date.at.time" = "آخرین بازدید @$1% ساعت @$2%";
@@ -1707,7 +1716,7 @@
 "unknown.contact" = "مخاطب ناشناخته";
 
 /* Text for action label that lets the user accept messages from unknown contacts */
-"unknown.contact.accept.to.message" = "برای پاسخ دادن پیام را قبول کنید";
+"unknown.contact.accept.to.message" = "قبول کردن پیام";
 
 /* Informational label that's shown in the banner for an unknown contact when they message the user for the first time */
 "unknown.contact.not.in.contact.book" = "این فرستنده در لیست مخاطبین شما نیست.";
@@ -1788,5 +1797,5 @@
 "your.post.externalshare.title" = "پستمن را در هالواپ ببینید";
 
 /* Notification that post is uploading */
-"your.post.externalshare.uploading" = "ایجاد پست...";
+"your.post.externalshare.uploading" = "ایجاد لینک...";
 
