--- a/Share Extension/fa.lproj/Localizable.strings
+++ b/Share Extension/fa.lproj/Localizable.strings
@@ -92,7 +92,7 @@
 "feed.privacy.list.dismiss.edit.favorites" = "الآن نه";
 
 /* Description of the alert shown to user indicating the author's post is only shown to the author's favorites audience */
-"feed.privacy.list.notOwn.only.description" = "این پست فقط برای به اشتراک گذاشتن با گروه خاص از مخاطبین است. میتوانید برای تغییر آن به حریم خصوصی در تنظیمات مراجعه کنید.";
+"feed.privacy.list.notOwn.only.description" = "فقط مخاطبین محبوب @% میتوانند این پست را ببینند.";
 
 /* Header for the favorites list when editing contacts to share with. */
 "feed.privacy.list.only.details" = "انتخاب کسانی که پست شما را میبینند";
@@ -101,7 +101,7 @@
 "feed.privacy.list.only.title" = "محبوب‌ها";
 
 /* Description of the alert shown to user indicating their post is only shown to their favorites audience */
-"feed.privacy.list.own.only.description" = "این پست فقط برای به اشتراک گذاشتن با گروه خاص از مخاطبین است. میتوانید مخاطبین خود را موقع تنظیم پست تغییر دهید و یا به حریم خصوصی در تنظیمات مراجعه کنید.";
+"feed.privacy.list.own.only.description" = "فقط مخاطبین محبوب شما میتوانند این پست را ببینند.";
 
 /* Button to edit favorites */
 "feed.privacy.list.set.favorites" = "تنظیم مخاطبین محبوب";
@@ -173,14 +173,14 @@
 "share.composer.uploading.fail.title" = "خطا در بارگذاری";
 
 /* Contacts category label */
-"share.destination.contacts" = "مخاطب‌ها";
+"share.destination.contacts" = "مخاطب‌های جدید";
 
 /* Groups category label */
-"share.destination.groups" = "گروه‌ها";
+"share.destination.groups" = "گروه‌هایتان";
 
 /* Share on the home feed label with all my contacts
    Share to all contacts */
-"share.destination.home" = "صفحه اصلی";
+"share.destination.home" = "مخاطبین";
 
 /* Alert title when a direct to contact sharing is missing
    Alert title when a direct to group sharing is missing */
